test/domains/compilerErrors/illegal-step.chpl

writeln({1..5, 2..5} by "hi");
