test/domains/compilerErrors/illegal-step.good
illegal-step.chpl:2: error: cannot use step of type string
